Register known jakarta.mail exception classes for reflection
Fixes #5142